[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polished-netcode"
version = "0.1.0.dev0"
description = "Refactored Polished Online link cable server"
readme = "../README.md"
authors = [{ name = "Polished Crystal Team" }]
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.2", "mypy>=1.8"]

[project.urls]
Homepage = "https://github.com/Rangi42/polishedcrystal"

[tool.setuptools]
packages = ["netcode"]
package-dir = {"netcode" = "."}
